// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CasesScreen in both directions (NFR-5) > LTR: an English trace stays left to right (snapshot) 1`] = `
"
page -           Case
page -           17
page -           Manual review
page -           Close
page -           decided on
page -           v
page -           1
page -           engine ·
page -           412 µs
page -           09:05:00
page -           matched
page -           did not match
page -           not reached
page -           disabled
page -           decided, ringed in its outcome
page -           Explain for an officer
page -           Explain for the applicant
page -           Export
page -           JSON
page -           ·
page -           CSV
page -           Decided by
page -           R-330
ltr  en          Referral: one credit event without a guarantor
page -           Reason for the applicant
ltr  en          One adverse credit event requires a guarantor
page -           Derived by the engine
page -           monthly_installment
page -           1,493.1 ₪
page -           debt_to_income
page -           0.2835
page -           Flags
page -           None.
page -           Steps, in the order the engine walked them
page -           R-170
ltr  en          Reject: net income below 7,000
page -           Did not match
page -           R-330
ltr  en          Referral: one credit event without a guarantor
page -           Matched · decided
page -           Field
page -           Expected
page -           In the case
page -           Result
page -           credit_events_24m
page -           = 1
page -           1
page -           met
page -           has_guarantor
page -           = false
page -           false
page -           met
page -           decide · Manual review · terminal
page -           1 rule that did not match is collapsed to its head · 1 not reached after the decision
page -           ·
page -           Show every comparison
"
`;

exports[`CasesScreen in both directions (NFR-5) > RTL: the trace of case 17 reads its Hebrew reasons right to left beside Latin fields and values (snapshot) 1`] = `
"
page -           Case
page -           17
page -           Manual review
page -           Close
page -           decided on
page -           v
page -           1
page -           engine ·
page -           412 µs
page -           09:05:00
page -           matched
page -           did not match
page -           not reached
page -           disabled
page -           decided, ringed in its outcome
page -           Explain for an officer
page -           Explain for the applicant
page -           Export
page -           JSON
page -           ·
page -           CSV
page -           Decided by
page -           R-330
rtl  he          בדיקת חתם: אירוע אשראי אחד ללא ערב
page -           Reason for the applicant
rtl  he          נדרש ערב בשל אירוע אשראי אחד ב-24 החודשים האחרונים
page -           Derived by the engine
page -           monthly_installment
page -           1,493.1 ₪
page -           debt_to_income
page -           0.2835
page -           Flags
page -           None.
page -           Steps, in the order the engine walked them
page -           R-170
rtl  he          דחייה: הכנסה חודשית נטו נמוכה מ-8,000
page -           Did not match
page -           R-330
rtl  he          בדיקת חתם: אירוע אשראי אחד ללא ערב
page -           Matched · decided
page -           Field
page -           Expected
page -           In the case
page -           Result
page -           credit_events_24m
page -           = 1
page -           1
page -           met
page -           has_guarantor
page -           = false
page -           false
page -           met
page -           decide · Manual review · terminal
page -           1 rule that did not match is collapsed to its head · 1 not reached after the decision
page -           ·
page -           Show every comparison
"
`;
